--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %} 
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
+{% block body_block %}
     
-    <body>
         <h1>Rango says...</h1> 
         <div>
             hey there partner! <br />
@@ -21,7 +19,9 @@
             <ul>
             {% for category in categories %}
                 <li>
-                    <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                    <a href="{% url 'rango:show_category' category.slug %}">
+                        {{ category.name }}
+                    </a>
                 </li>
             {% endfor %}
             </ul>
@@ -35,7 +35,11 @@
         {% if pages %}
             <ul>
             {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                <li>
+                    <a href="{{ page.url }}">
+                        {{ page.title }}
+                    </a>
+                </li>
             {% endfor %}
             </ul>
         {% else %}
@@ -43,12 +47,6 @@
         {% endif %}
         </div>
 
-        <div>
-            <a href="/rango/about/">About</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango" />
-        </div>
-    </body>
-
-</html>
+    <img src="{% static 'images/rango.jpg' %}" 
+        alt="Picture of Rango" />
+{% endblock %}
